// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UsersForm /> renders create user 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      data-automation="loginDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        componentType="input"
        data-automation="emailInput"
        disabled={false}
        id="frm-users-email"
        inputType="text"
        label="Email *"
        name="email"
      />
      <SelectField
        data-automation="roleList"
        disabled={false}
        id="frm-users-platform-role-id"
        label="Platform Role *"
        name="platformRoleId"
        options={Array []}
        required={false}
      />
      <SelectField
        data-automation="authenticationList"
        disabled={false}
        id="frm-users-no-password-id"
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Use Tenant Default: Enabled",
              "value": "null",
            },
            Object {
              "label": "Enabled",
              "value": true,
            },
            Object {
              "label": "Disabled",
              "value": false,
            },
          ]
        }
        required={true}
      />
      <SelectField
        data-automation="identityProviderList"
        disabled={false}
        id="frm-users-default-identity-provider-id"
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="tenantDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        componentType="input"
        data-automation="workstationIdInput"
        disabled={false}
        id="frm-users-work-station-id"
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        data-automation="tenantList"
        disabled={false}
        id="frm-users-role-id"
        label="Tenant Role *"
        name="roleId"
        options={Array []}
        required={false}
      />
      <ToggleField
        data-automation="inviteToggle"
        disabled={false}
        id="frm-users-invite-now"
        label="Invite Now"
        name="inviteNow"
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders create user saving and inherited 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      data-automation="loginDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        componentType="input"
        data-automation="emailInput"
        disabled={false}
        id="frm-users-email"
        inputType="text"
        label="Email *"
        name="email"
      />
      <SelectField
        data-automation="roleList"
        disabled={true}
        id="frm-users-platform-role-id"
        label="Platform Role *"
        name="platformRoleId"
        options={Array []}
        required={false}
      />
      <SelectField
        data-automation="authenticationList"
        disabled={true}
        id="frm-users-no-password-id"
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Use Tenant Default: Enabled",
              "value": "null",
            },
            Object {
              "label": "Enabled",
              "value": true,
            },
            Object {
              "label": "Disabled",
              "value": false,
            },
          ]
        }
        required={true}
      />
      <SelectField
        data-automation="identityProviderList"
        disabled={true}
        id="frm-users-default-identity-provider-id"
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="tenantDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        componentType="input"
        data-automation="workstationIdInput"
        disabled={true}
        id="frm-users-work-station-id"
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        data-automation="tenantList"
        disabled={true}
        id="frm-users-role-id"
        label="Tenant Role *"
        name="roleId"
        options={Array []}
        required={false}
      />
      <ToggleField
        data-automation="inviteToggle"
        disabled={true}
        id="frm-users-invite-now"
        label="Invite Now"
        name="inviteNow"
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders create user without create permision 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      data-automation="loginDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        componentType="input"
        data-automation="emailInput"
        disabled={false}
        id="frm-users-email"
        inputType="text"
        label="Email *"
        name="email"
      />
      <SelectField
        data-automation="roleList"
        disabled={true}
        id="frm-users-platform-role-id"
        label="Platform Role *"
        name="platformRoleId"
        options={Array []}
        required={false}
      />
      <SelectField
        data-automation="authenticationList"
        disabled={true}
        id="frm-users-no-password-id"
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Use Tenant Default: Enabled",
              "value": "null",
            },
            Object {
              "label": "Enabled",
              "value": true,
            },
            Object {
              "label": "Disabled",
              "value": false,
            },
          ]
        }
        required={true}
      />
      <SelectField
        data-automation="identityProviderList"
        disabled={true}
        id="frm-users-default-identity-provider-id"
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="tenantDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        componentType="input"
        data-automation="workstationIdInput"
        disabled={true}
        id="frm-users-work-station-id"
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        data-automation="tenantList"
        disabled={true}
        id="frm-users-role-id"
        label="Tenant Role *"
        name="roleId"
        options={Array []}
        required={false}
      />
      <ToggleField
        data-automation="inviteToggle"
        disabled={true}
        id="frm-users-invite-now"
        label="Invite Now"
        name="inviteNow"
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;
